bdr.BDR.scala.code
var finished = false

while (! finished){getIndication()}
